welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:3: error: not found: value taille
  taille=nums.lenght
  ^occurrences:5: error: not found: value taille
  for(i<-0 to (taille-1)){
               ^